changes: css updated

--- a/src/Curl.css
+++ b/src/Curl.css
@@ -1,5 +1,5 @@
 .curl {
-  background-color: black;
+  background-color: rgba(0, 0, 0, 0.4);
   padding: 15px;
   border-radius: 15px;
   color: white;
