--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,10 @@
 body {
+  background-image: url("buff.png");
+  background-color: black;
+  background-repeat: no-repeat;
+  background-position: 100%;
+  background-size: contain;
+  background-attachment: fixed;
   display: flex;
   justify-content: center;
   align-items: center;
