--- a/src/Bench.css
+++ b/src/Bench.css
@@ -1,11 +1,16 @@
 .title {
-  font-size: 30px;
-  color: black;
+  font-size: 50px;
+  color: red;
 }
 .bench {
-  background-color: black;
+  margin-top: 20px;
+  background-color: rgba(0, 0, 0, 0.4);
   padding: 15px;
   border-radius: 15px;
   color: white;
   border: 2px solid #5dca31;
+}
+.go {
+  color: white;
+  font-size: 50px;
 }
