--- a/src/Squat.css
+++ b/src/Squat.css
@@ -1,5 +1,5 @@
 .squat {
-  background-color: black;
+  background-color: rgba(0, 0, 0, 0.4);
   padding: 15px;
   border-radius: 15px;
   color: white;
